# toonslate-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
src/: celery_app.py  config.py  constants.py  main.py
src/infra/: celery_app.py  redis.py
src/infra/storage/: __init__.py  base.py  local.py
src/infra/workers/: translate_job.py
src/routes/: batch.py  erase.py  job.py  translate.py  upload.py
src/schemas/: base.py  pipeline.py
src/services/: batch.py  detection.py  erase.py  job.py  job_status.py  nano_banana.py  pipeline.py  quota.py  rendering.py  translate.py  translation.py  upload.py
src/services/detection/: __init__.py  base.py  hf_space.py  schemas.py
src/services/inpainting/: __init__.py  background_restorer.py  base.py  bubble_cleaner.py  classifier.py  inpainter.py  iopaint_lama.py  replicate_lama.py  solid_fill.py  utils.py
src/services/translation/: __init__.py  base.py  gemini.py
src/tasks/: process_job.py
src/utils/storage/: __init__.py  base.py  local.py
tests/: conftest.py
tests/infra/storage/: test_local.py
tests/routes/: test_batch.py  test_erase.py  test_job.py  test_upload.py
tests/services/: test_batch.py  test_erase_utils.py  test_pipeline.py  test_quota.py
tests/services/detection/: test_factory.py  test_hf_space.py
tests/services/inpainting/: test_background_restorer.py  test_bubble_cleaner.py  test_classifier.py  test_factory.py  test_inpainter.py  test_utils.py
tests/services/translation/: test_factory.py  test_gemini.py
tests/utils/storage/: test_local.py
